moved padding from body to display tuts; no longer shows gap on splash/footer page

--- a/react-app/src/components/MainFeed/MainFeed.css
+++ b/react-app/src/components/MainFeed/MainFeed.css
@@ -2,6 +2,6 @@
   /* border: 1px solid red; */
   display:flex;
   flex-wrap: wrap;
-  /* padding-top: 4000px; */
+  padding-top: 60px;
 
 }
