--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -10,9 +10,9 @@
   background-color: #181818;
 }
 
-body {
+/* body {
   padding-top: 60px;
-}
+} */
 
 @media (wax-width: 979px) {
   body {
